--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "react-dev-utils": "^12.0.1",
     "react-test-renderer": "17.0.2",
     "reactifex": "1.1.1",
-    "redux-mock-store": "^1.5.3",
-    "semantic-release": "^19.0.3"
+    "redux-mock-store": "^1.5.3"
   }
 }
