fix: update PARAGON_THEME_URLS to fallback in local styles

--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ ENTERPRISE_MARKETING_FOOTER_UTM_MEDIUM=''
 APP_ID=''
 MFE_CONFIG_API_URL=''
 DISPLAY_FEEDBACK_WIDGET='true'
+# Fallback in local style files
+PARAGON_THEME_URLS={}
