--- a/.env.development
+++ b/.env.development
@@ -40,3 +40,5 @@ ENTERPRISE_MARKETING_FOOTER_UTM_MEDIUM='Footer'
 APP_ID=''
 MFE_CONFIG_API_URL=''
 DISPLAY_FEEDBACK_WIDGET='false'
+# Fallback in local style files
+PARAGON_THEME_URLS={}
