--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "semantic-release": "semantic-release",
     "start": "fedx-scripts webpack-dev-server --progress",
     "dev": "PUBLIC_PATH=/gradebook/ MFE_CONFIG_API_URL='http://localhost:8000/api/mfe_config/v1' fedx-scripts webpack-dev-server --progress --host apps.local.openedx.io",
-    "test": "TZ=GMT fedx-scripts jest --coverage --passWithNoTests",
+    "test": "TZ=GMT NODE_ENV=test fedx-scripts jest --coverage --passWithNoTests",
     "watch-tests": "jest --watch"
   },
   "author": "edX",
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
     "@openedx/frontend-build": "^14.3.3",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "es-check": "^2.3.0",
     "fetch-mock": "^12.2.0",
