--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
     "@openedx/frontend-build": "^14.3.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "es-check": "^2.3.0",
     "fetch-mock": "^12.2.0",
     "identity-obj-proxy": "^3.0.0",
