--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,15 @@
-.DS_Store
-.eslintcache
 node_modules
 npm-debug.log
 coverage
-
+module.config.js
 dist/
+/*.tgz
+
+### i18n ###
 src/i18n/transifex_input.json
-temp/babel-plugin-react-intl
 
-### pyenv ###
-.python-version
-
-### Emacs ###
+### Editors ###
+.DS_Store
 *~
-*.swo
-*.swp
-
-### Development environments ###
-.idea
-.vscode
-
-### transifex ###
-src/i18n/transifex_input.json
-temp
-
-src/i18n/messages/
+/temp
+/.vscode
