--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@openedx/frontend-build": "^14.3.3",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "es-check": "^2.3.0",
     "fetch-mock": "^12.2.0",
     "identity-obj-proxy": "^3.0.0",
