--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "src/**/*",
     "app.d.ts",
     "babel.config.js",
-    ".eslintrc.js",
+    "eslint.config.js",
     "jest.config.js",
     "site.config.*.tsx",
   ],
